--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Rails Ignore
+
 *.rbc
 capybara-*.html
 .rspec
@@ -40,3 +42,20 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+
+### Grails Ignore
+
+Thumbs.db
+.DS_Store
+.gradle
+build/
+classes/
+.idea
+*.iml
+*.ipr
+*.iws
+.project
+.settings
+.classpath
+
+### My Ignore
