--- a/scfgrails/grails-app/conf/application.yml
+++ b/scfgrails/grails-app/conf/application.yml
@@ -50,7 +50,7 @@ environments:
 grails:
     profile: web
     codegen:
-        defaultPackage: scf.grails
+        defaultPackage: scfgrails
     spring:
         transactionManagement:
             proxies: false
